--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .container {
     width: 90%;
     max-width: 600px;
-    background-color: #ffffff;
+    background:transparent; ;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
